apollo-router/src/plugins/response_cache/snapshots/apollo_router__plugins__response_cache__tests__no_cache_control-2.snap
---
source: apollo-router/src/plugins/response_cache/tests.rs
expression: response
---
{
  "data": {
    "currentUser": {
      "activeOrganization": {
        "id": "1",
        "creatorUser": {
          "__typename": "User",
          "id": 2
        }
      }
    }
  }
}
