apollo-router/src/plugins/response_cache/snapshots/apollo_router__plugins__response_cache__tests__no_data-3.snap
---
source: apollo-router/src/plugins/response_cache/tests.rs
expression: cache_keys
---
[
  {
    "key": "version:1.2:subgraph:user:type:Query:hash:d63d46fceb2f3d645954f0f715ff6edaeeeb62061b8b0ef908c7d0676aaf8a1f:data:070af9367f9025bd796a1b7e0cd1335246f658aa4857c3a4d6284673b7d07fa6",
    "invalidationKeys": [
      "currentUser",
      "subgraph-user",
      "type-user-Query"
    ],
    "indexes": {
      "subgraph": true,
      "type": true,
      "cache_tag": true
    },
    "kind": {
      "rootFields": [
        "currentUser"
      ]
    },
    "subgraphName": "user",
    "subgraphRequest": {
      "query": "{ currentUser { allOrganizations { __typename id } } }"
    },
    "source": "subgraph",
    "cacheControl": {
      "created": 0,
      "noStore": true
    },
    "shouldStore": false,
    "data": {
      "data": {
        "currentUser": {
          "allOrganizations": [
            {
              "__typename": "Organization",
              "id": "1"
            },
            {
              "__typename": "Organization",
              "id": "2"
            },
            {
              "__typename": "Organization",
              "id": "3"
            }
          ]
        }
      }
    },
    "warnings": [
      {
        "code": "CACHE_CONTROL_NO_STORE",
        "links": [
          {
            "url": "https://developer.mozilla.org/en-US/docs/Web/HTTP/Reference/Headers/Cache-Control",
            "title": "Cache-Control header documentation"
          }
        ],
        "message": "Either the request or the subgraph response contained a Cache-Control header with no-store, so the data was not cached"
      }
    ]
  },
  {
    "key": "version:1.2:subgraph:orga:type:Organization:representation:f6e8c0c4f36d6c0d11330be52b76316559e0390ff75fd002ed3fa73f9b6470f7:hash:865d550c632f13af8a0cb993e9e0c05e937f9dea36aac19ecee9a1f310768c5c:data:070af9367f9025bd796a1b7e0cd1335246f658aa4857c3a4d6284673b7d07fa6",
    "invalidationKeys": [
      "organization",
      "organization-1",
      "subgraph-orga",
      "type-orga-Organization"
    ],
    "indexes": {
      "subgraph": true,
      "type": true,
      "cache_tag": true
    },
    "kind": {
      "typename": "Organization",
      "entityKey": {
        "id": "1"
      }
    },
    "subgraphName": "orga",
    "subgraphRequest": {
      "query": "query($representations: [_Any!]!) { _entities(representations: $representations) { ... on Organization { name } } }",
      "variables": {
        "representations": [
          {
            "id": "2",
            "__typename": "Organization"
          }
        ]
      }
    },
    "source": "cache",
    "cacheControl": {
      "created": 0,
      "maxAge": 3600,
      "public": true
    },
    "shouldStore": true,
    "data": {
      "data": {
        "name": "Organization 1"
      }
    },
    "warnings": []
  },
  {
    "key": "version:1.2:subgraph:orga:type:Organization:representation:07ea57c08f759cd09342c5a65d5d726fb5930a9796b1ec27a82189e5694dcc2b:hash:865d550c632f13af8a0cb993e9e0c05e937f9dea36aac19ecee9a1f310768c5c:data:070af9367f9025bd796a1b7e0cd1335246f658aa4857c3a4d6284673b7d07fa6",
    "invalidationKeys": [
      "organization",
      "organization-3",
      "subgraph-orga",
      "type-orga-Organization"
    ],
    "indexes": {
      "subgraph": true,
      "type": true,
      "cache_tag": true
    },
    "kind": {
      "typename": "Organization",
      "entityKey": {
        "id": "3"
      }
    },
    "subgraphName": "orga",
    "subgraphRequest": {
      "query": "query($representations: [_Any!]!) { _entities(representations: $representations) { ... on Organization { name } } }",
      "variables": {
        "representations": [
          {
            "id": "2",
            "__typename": "Organization"
          }
        ]
      }
    },
    "source": "cache",
    "cacheControl": {
      "created": 0,
      "maxAge": 3600,
      "public": true
    },
    "shouldStore": true,
    "data": {
      "data": {
        "name": "Organization 3"
      }
    },
    "warnings": []
  }
]
