apollo-router/src/plugins/response_cache/snapshots/apollo_router__plugins__response_cache__tests__no_data-4.snap
---
source: apollo-router/src/plugins/response_cache/tests.rs
expression: response
---
{
  "data": {
    "currentUser": {
      "allOrganizations": [
        {
          "id": "1",
          "name": "Organization 1"
        },
        {
          "id": "2",
          "name": null
        },
        {
          "id": "3",
          "name": "Organization 3"
        }
      ]
    }
  },
  "errors": [
    {
      "message": "HTTP fetch failed from 'orga': orga not found",
      "path": [
        "currentUser",
        "allOrganizations",
        1
      ],
      "extensions": {
        "code": "SUBREQUEST_HTTP_ERROR",
        "service": "orga",
        "reason": "orga not found"
      }
    }
  ]
}
