apollo-router/src/plugins/response_cache/snapshots/apollo_router__plugins__response_cache__tests__polymorphic_private_and_public-5.snap
---
source: apollo-router/src/plugins/response_cache/tests.rs
expression: cache_keys
---
[
  {
    "key": "version:1.2:subgraph:user:type:Query:hash:8a5fb670d4bfcb50d484dee257cf8d295a117c475ab7c8c1d132c1354fdd79f3:data:070af9367f9025bd796a1b7e0cd1335246f658aa4857c3a4d6284673b7d07fa6",
    "invalidationKeys": [
      "currentUser",
      "subgraph-user",
      "type-user-Query"
    ],
    "indexes": {
      "subgraph": true,
      "type": true,
      "cache_tag": true
    },
    "kind": {
      "rootFields": [
        "currentUser"
      ]
    },
    "subgraphName": "user",
    "subgraphRequest": {
      "query": "{ currentUser { activeOrganization { __typename id } } }"
    },
    "source": "cache",
    "cacheControl": {
      "created": 0,
      "maxAge": 86400,
      "public": true
    },
    "shouldStore": true,
    "hashedPrivateId": "cde13a55f41e387480391c47238acfe9c0136dd56bf365b01416aec03eec7dc4",
    "data": {
      "data": {
        "currentUser": {
          "activeOrganization": {
            "__typename": "Organization",
            "id": "1"
          }
        }
      }
    },
    "warnings": []
  },
  {
    "key": "version:1.2:subgraph:orga:type:Organization:representation:f6e8c0c4f36d6c0d11330be52b76316559e0390ff75fd002ed3fa73f9b6470f7:hash:aea5bb0fdc880651b4bb6c392eea5b8c7c5b26af829da1143dd352f2c9f58bbd:data:070af9367f9025bd796a1b7e0cd1335246f658aa4857c3a4d6284673b7d07fa6:cde13a55f41e387480391c47238acfe9c0136dd56bf365b01416aec03eec7dc4",
    "invalidationKeys": [
      "organization",
      "organization-1",
      "subgraph-orga",
      "type-orga-Organization"
    ],
    "indexes": {
      "subgraph": true,
      "type": true,
      "cache_tag": true
    },
    "kind": {
      "typename": "Organization",
      "entityKey": {
        "id": "1"
      }
    },
    "subgraphName": "orga",
    "subgraphRequest": {
      "query": "query($representations: [_Any!]!) { _entities(representations: $representations) { ... on Organization { creatorUser { __typename id } } } }",
      "variables": {
        "representations": []
      }
    },
    "source": "cache",
    "cacheControl": {
      "created": 0,
      "maxAge": 86400,
      "private": true
    },
    "shouldStore": true,
    "hashedPrivateId": "cde13a55f41e387480391c47238acfe9c0136dd56bf365b01416aec03eec7dc4",
    "data": {
      "data": {
        "creatorUser": {
          "__typename": "User",
          "id": "2"
        }
      }
    },
    "warnings": []
  },
  {
    "key": "version:1.2:subgraph:orga:type:Query:hash:5b47eb5f5b291b8b530d068e06a889d8271b422889171da9afa9f83c890f0992:data:070af9367f9025bd796a1b7e0cd1335246f658aa4857c3a4d6284673b7d07fa6:cde13a55f41e387480391c47238acfe9c0136dd56bf365b01416aec03eec7dc4",
    "invalidationKeys": [
      "subgraph-orga",
      "type-orga-Query"
    ],
    "indexes": {
      "subgraph": true,
      "type": true,
      "cache_tag": true
    },
    "kind": {
      "rootFields": [
        "orga"
      ]
    },
    "subgraphName": "orga",
    "subgraphRequest": {
      "query": "{ orga(id: \"2\") { name } }"
    },
    "source": "cache",
    "cacheControl": {
      "created": 0,
      "maxAge": 86400,
      "private": true
    },
    "shouldStore": true,
    "hashedPrivateId": "cde13a55f41e387480391c47238acfe9c0136dd56bf365b01416aec03eec7dc4",
    "data": {
      "data": {
        "orga": {
          "name": "test_orga"
        }
      }
    },
    "warnings": [
      {
        "code": "NO_CACHE_TAG_ON_ROOT_FIELD",
        "links": [
          {
            "url": "https://www.apollographql.com/docs/graphos/routing/performance/caching/response-caching/invalidation#invalidation-methods",
            "title": "Add '@cacheTag' in your schema"
          }
        ],
        "message": "No cache tags are specified on your root fields query. If you want to use active invalidation, you'll need to add cache tags on your root field."
      }
    ]
  }
]
